# CMakeList.txt : CMake project for AdventOfCode1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (AdventOfCode1 "AdventOfCode1.cpp" "AdventOfCode1.h")

# TODO: Add tests and install targets if needed.
